build_error.txt

> portfolio@0.0.0 build
> vite build

[36mvite v8.0.2 [32mbuilding client environment for production...[36m[39m
[2Ktransforming...✓ 417 modules transformed.
[31m✗[39m Build failed in 738ms
[31merror during build:
[31mBuild failed with 1 error:

[plugin vite:css-post]
SyntaxError: [lightningcss minify] Unexpected token in attribute selector: Colon
937 |  }
938 |  
939 |  [backface-visibility:hidden] {
    |                      ^
940 |    backface-visibility: hidden;
941 |  }
    at Module.<anonymous> (D:\portfolio\node_modules\lightningcss\node\index.js:56:14)
    at minifyCSS (file:///D:/portfolio/node_modules/vite/dist/node/chunks/node.js:21201:59)
    at async finalizeCss (file:///D:/portfolio/node_modules/vite/dist/node/chunks/node.js:21047:36)
    at async Promise.all (index 1)
    at async Object.run (file:///D:/portfolio/node_modules/vite/dist/node/chunks/node.js:2436:22)
    at async PluginContextImpl.renderChunk (file:///D:/portfolio/node_modules/vite/dist/node/chunks/node.js:20586:19)
    at async plugin (file:///D:/portfolio/node_modules/rolldown/dist/shared/bindingify-input-options-DVAZE22h.mjs:1234:16)
    at async plugin.<computed> (file:///D:/portfolio/node_modules/rolldown/dist/shared/bindingify-input-options-DVAZE22h.mjs:1593:12)[31m
    at aggregateBindingErrorsIntoJsError (file:///D:/portfolio/node_modules/rolldown/dist/shared/error-D8cGyrC7.mjs:48:18)
    at unwrapBindingResult (file:///D:/portfolio/node_modules/rolldown/dist/shared/error-D8cGyrC7.mjs:18:128)
    at #build (file:///D:/portfolio/node_modules/rolldown/dist/shared/rolldown-build-CL9PyQ2E.mjs:3313:34)
    at async buildEnvironment (file:///D:/portfolio/node_modules/vite/dist/node/chunks/node.js:32829:64)
    at async Object.build (file:///D:/portfolio/node_modules/vite/dist/node/chunks/node.js:33251:19)
    at async Object.buildApp (file:///D:/portfolio/node_modules/vite/dist/node/chunks/node.js:33248:153)
    at async CAC.<anonymous> (file:///D:/portfolio/node_modules/vite/dist/node/cli.js:778:3) {
  errors: [Getter/Setter]
}[39m
